panels overflow fixed

--- a/src/features/layers_panel/components/MapLayersPanel/MapLayersPanel.module.css
+++ b/src/features/layers_panel/components/MapLayersPanel/MapLayersPanel.module.css
@@ -1,8 +1,9 @@
 .panel {
   width: 100%;
-  height: auto;
-  max-height: 100vh;
+  height: 100%;
+  overflow: hidden;
   &.collapse {
+    height: auto;
     & div:not(:first-child) {
       display: none;
     }
@@ -11,8 +12,6 @@
 
 .scrollable {
   overflow-y: auto;
-  width: 100%;
-  height: 100%;
   max-height: 100vh;
 }
 
