--- a/src/features/legend_panel/components/LegendPanel/LegendPanel.module.css
+++ b/src/features/legend_panel/components/LegendPanel/LegendPanel.module.css
@@ -18,7 +18,7 @@
 
 .panelBody {
   height: 100%;
-  width: 260px;
+  width: 100%;
   padding: var(--double-unit);
   overflow-y: auto;
   overflow-x: hidden;
